# gswa-etl-testing

./: README.md  pyproject.toml
etl/: funcs.py  utils.py
tests/: test_funcs.py
